fix: allow all CORS origins for AWS deployment